quarkus update and simpledemo update to RHSI 2.1